get all songs of an artist
