# internal/routes/v1/group.go
@@ -9,15 +9,15 @@ func (v *Router) Groups() http.Handler {
 	apimux := http.NewServeMux()
 	log := logger.NewLogger(nil)
 
-	apimux.Handle("GET /group/songs", http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		v.View.GetGroupSongs(log, w, r)
-	}))
-
 	// root/api/groups
 	// body: { "group_name": "group_name" }
 	// returning: uuid of requested group
 	apimux.Handle("GET /", http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		v.View.GetGroups(log, w, r)
+		v.View.GetAllGroups(log, w, r)
+	}))
+
+	apimux.Handle("GET /songs", http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		v.View.GetGroupSongs(log, w, r)
 	}))
 
 	apimux.Handle("POST /new_group", http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
